fix border alignment issues

--- a/src/less/time-grid.less
+++ b/src/less/time-grid.less
@@ -24,6 +24,7 @@
   }
 
   .rbc-allday-cell {
+    box-sizing: content-box;
     width: 100%;
     position: relative;
   }
@@ -34,6 +35,7 @@
   }
 
   .rbc-row {
+    box-sizing: border-box;
     min-height: 20px;
   }
 }
